# duihua-gateway

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: publish.yml  validate.yml
charts/duihua-gateway/: Chart.yaml  values.yaml
charts/duihua-gateway/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
scripts/: helm-smoke-kind.sh
src/: app.rs  background.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  responses_store.rs  state.rs  store.rs  upstream.rs
src/routes/: chat.rs  embeddings.rs  health.rs  messages.rs  mod.rs  models.rs  responses.rs
