[package]
name = "duihua-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/beranekio/duihua-gateway"
description = "OpenAI-compatible HTTP gateway for self-hosted inference"

[lib]
name = "duihua_gateway"
path = "src/lib.rs"

[[bin]]
name = "duihua-gateway"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }
responses-api-store-client = { git = "https://github.com/beranekio/responses-api-store", branch = "main" }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tower-http = { version = "0.7", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }